--- a/DiscogsBrowser/Base.lproj/Main.storyboard
+++ b/DiscogsBrowser/Base.lproj/Main.storyboard
@@ -22,10 +22,10 @@
             </objects>
             <point key="canvasLocation" x="-508" y="154"/>
         </scene>
-        <!--Discogs Browser-->
+        <!--Browser for Discogs-->
         <scene sceneID="TS6-2z-LTg">
             <objects>
-                <collectionViewController id="NlC-sC-bc3" customClass="CollectionViewController" customModule="DiscogsBrowser" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="NlC-sC-bc3" customClass="CollectionViewController" customModule="Browser_for_Discogs" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="vJg-oO-YrA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,7 +37,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="releaseCell" id="bTT-nN-dWd" customClass="ReleaseCollectionViewCell" customModule="DiscogsBrowser" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="releaseCell" id="bTT-nN-dWd" customClass="ReleaseCollectionViewCell" customModule="Browser_for_Discogs" customModuleProvider="target">
                                 <rect key="frame" x="10" y="64" width="300" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -70,7 +70,7 @@
                             <outlet property="delegate" destination="NlC-sC-bc3" id="mbd-MI-16f"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Discogs Browser" id="bb3-fV-ddr"/>
+                    <navigationItem key="navigationItem" title="Browser for Discogs" id="bb3-fV-ddr"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rrp-fH-hBY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
